tests/type-errors/move-semantics/nocopy_continue_join.cx
struct Data : @nocopy {
    int data;
};

void consume(Data data) {}

int bad() {
    int cond = 0;
    Data data = (Data) {
        .data = 1
    };

    while (cond) {
        consume(move data);
        continue;
    }

    return 0;
}
